@@ -105,6 +105,23 @@ if [[ ! -e $JUICEBOXJAR ]]; then
     exit 1
 fi
 
+## Deal with old format
+nbfields=$(head -1 $VALIDPAIRS | awk '{print NF}')
+
+if [[ $nbfields == "12" ]]; then
+    echo -e "HiC-Pro format > 2.7.5 detected ..."
+
+elif [[ $nbfields == "8" ]]; then
+    echo -e "HiC-Pro format < 2.7.6 detected ..."
+    echo -e "Adjusting AllValidPairs format ..."
+    awk '{OFS="\t"; print $0,0,1,42,42}' $VALIDPAIRS > ${TEMP}/$$_format_AllValidPairs
+    VALIDPAIRS=${TEMP}/$$_format_AllValidPairs
+
+else
+    echo -e "Error : unknown format - $nbfields detected, whereas 8 (< v2.7.6) or 12 (> v2.7.5) fields are expected !"
+    exit 1
+fi
+
 echo "Generating Juicebox input files ..."
 
 if [[ ! -z $RESFRAG ]]; then
@@ -117,7 +134,7 @@ if [[ ! -z $RESFRAG ]]; then
 
     ## The “pre” command needs the contact map to be sorted by chromosome and grouped so that all reads for one chromosome (let’s say, chr1) appear in the same column.
     ## Also, chromosomes should not have the ‘chr” substring and the strand is coded as 0 for positive and anything else for negative (in practice, 1).
-    awk '{$4=$4!="+"; $7=$7!="+"; n1=split($9, frag1, "_"); n2=split($10, frag2, "_"); } $2<=$5{print $1, $4, $2, $3, frag1[n1], $7, $5, $6, frag2[n2], $11, $12 }$5<$2{ print $1, $7, $5, $6, frag2[3], $4, $2, $3, frag1[3], $12, $11}' $VALIDPAIRS | sort -k3,3d  -k7,7d -S 90 > ${TEMP}/$$_allValidPairs.pre_juicebox_sorted
+    awk '{$4=$4!="+"; $7=$7!="+"; n1=split($9, frag1, "_"); n2=split($10, frag2, "_"); } $2<=$5{print $1, $4, $2, $3, frag1[n1], $7, $5, $6, frag2[n2], $11, $12 }$5<$2{ print $1, $7, $5, $6, frag2[n2], $4, $2, $3, frag1[n1], $12, $11}' $VALIDPAIRS | sort -k3,3d  -k7,7d -S 90 > ${TEMP}/$$_allValidPairs.pre_juicebox_sorted
 else
     awk '{$4=$4!="+"; $7=$7!="+"} $2<=$5{print $1, $4, $2, $3, 0, $7, $5, $6, 1, $11, $12 }$5<$2{ print $1, $7, $5, $6, 0, $4, $2, $3, 1, $12, $11 }' $VALIDPAIRS | sort -k3,3d  -k7,7d -S 90 > ${TEMP}/$$_allValidPairs.pre_juicebox_sorted
 fi
